Use of the BEM class naming convention

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1 class="leaderboard">Leaderboard</h1>
+    <h1 class="title">Leaderboard</h1>
     <main class="main">
         <section class="main__section">
             <header class="section__header">
