Change p tag to small

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 <input class="form__input" type="text" placeholder="Your name" required>
                 <input class="form__input" type="number" placeholder="Your score" required>
                 <button class="form__btn" type="submit">Submit</button>
-                <p class="form__text"></p>
+                <small class="form__text"></small>
             </form>
         </section>
     </main>
