change main class name to container

--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,15 @@
 
 <body>
     <h1 class="title">Leaderboard</h1>
-    <main class="main">
-        <section class="main__section">
+    <main class="container">
+        <section class="container__section">
             <header class="section__header">
                 <h2 class="section__title">Recent scores</h2>
                 <button class="section__btn" type="button">Refresh</button>
             </header>
             <ul class="section__list"></ul>
         </section>
-        <section class="main__section">
+        <section class="container__section">
             <h2 class="section__title">Add your score</h2>
             <form class="form">
                 <input class="form__input" type="text" placeholder="Your name" required>
